# hcc_blogs

introduction/: CMakeLists.txt  saxpy.cpp  saxpy_am_alloc.cpp  saxpy_array.cpp  saxpy_pstl.cpp
matmul/: CMakeLists.txt  matmul.cpp
matmul_wave_rotate/: CMakeLists.txt  matmul_wave_rotate.cpp
multi_acc/: CMakeLists.txt  multi_acc.cpp  multi_acc_array.cpp
multi_acc_view/: CMakeLists.txt  multi_acc_view.cpp
pstl/: CMakeLists.txt  hc_am.cpp  hc_am.hpp  reduce.cpp
reduction/: CMakeLists.txt  reduce_bpermute.cpp  reduce_dynamic_group_mem.cpp  reduce_group_mem.cpp  reduce_permute.cpp  reduce_shuffle.cpp
tile/: tile.cpp
workgroup/: workgroup.cpp
